# radar-camera-fusion

./: README.md  radar_camera_fusion.launch
Dataset/nuscenes2bag/: nuscenes2bag.launch
Dataset/nuscenes2bag/build_isolated/: catkin_make_isolated.cache
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/atomic_configure/: local_setup.sh
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/catkin_generated/installspace/: .rosinstall  local_setup.sh  nuscenes2bag.pc  setup.sh
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/cmake/: nuscenes2bag-genmsg-context.py  nuscenes2bag-genmsg.cmake
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/gtest/: CTestTestfile.cmake  cmake_install.cmake
Dataset/nuscenes2bag/build_isolated/nuscenes2bag/gtest/gtest/: CTestTestfile.cmake  cmake_install.cmake
Dataset/nuscenes2bag/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
Dataset/nuscenes2bag/devel_isolated/nuscenes2bag/: .catkin  .rosinstall  setup.sh
Dataset/nuscenes2bag/devel_isolated/nuscenes2bag/include/nuscenes2bag/: RadarObject.h  RadarObjects.h
Dataset/nuscenes2bag/devel_isolated/nuscenes2bag/lib/nuscenes2bag/: nuscenes2bag
Dataset/nuscenes2bag/devel_isolated/nuscenes2bag/lib/pkgconfig/: nuscenes2bag.pc
src/radar_camera_fusion/: CMakeLists.txt  package.xml
src/radar_camera_fusion/config/: params.yaml
src/radar_camera_fusion/include/radar_camera_fusion/common/: math.h  rigid_transform.h  time.h  transform.h
src/radar_camera_fusion/include/radar_camera_fusion/common/proto/: transform.pb.cc  transform.pb.h  transform.proto
src/radar_camera_fusion/include/radar_camera_fusion/global_defination/: global_defination.h.in
src/radar_camera_fusion/include/radar_camera_fusion/sensor_data/: camera_data.hpp  radar_data.hpp
src/radar_camera_fusion/include/radar_camera_fusion/subscriber/: camera_subscriber.hpp  radar_subscriber.hpp
src/radar_camera_fusion/include/radar_camera_fusion/tf_listener/: tf_listener.hpp
src/radar_camera_fusion/include/radar_camera_fusion/tools/: visualizer.hpp
src/radar_camera_fusion/src/apps/: test_radar_node.cpp  test_radar_node.hpp
src/radar_camera_fusion/src/common/: rigid_transform.cpp  time.cpp  transform.cpp
src/radar_camera_fusion/src/sensor_data/: camera_data.cpp  radar_data.cpp
src/radar_camera_fusion/src/subscriber/: camera_subscriber.cpp  radar_subscriber.cpp
src/radar_camera_fusion/src/tf_listener/: tf_lisener.cpp
src/radar_camera_fusion/src/tools/: visualizer.cpp
(+14 files in other folders)
